Fixed button spacing

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -28,53 +28,52 @@
   display: flex;
 }
 
-.main__shopnow{
-    width: 50%;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(230, 230, 230, 0.753);
-    font-family: var(--playfair-display);
-    padding: 50px;
-    line-height: 40px;
+.main__shopnow {
+  width: 50%;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(230, 230, 230, 0.753);
+  font-family: var(--playfair-display);
+  padding: 50px;
+  line-height: 40px;
 }
 
-.main__btn-container{
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    padding:20px;
-    width: 300px;
+.main__btn-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 20px;
+  width: 300px;
 }
 
-.main__shopnow-btn{
-    background-color: rgb(24, 24, 24);
-    border-radius: 40px;
-    color: rgb(236, 236, 236);
-    padding: 15px;
-    width: 100px;
-    font-weight: 600;
-    border: 0;
-    margin-top: 20px;
-    margin-right: 20px;
-    height: 45px;
-    display: flex;
+.main__shopnow-btn {
+  background-color: rgb(24, 24, 24);
+  border-radius: 40px;
+  color: rgb(236, 236, 236);
+  padding: 15px;
+  width: 120px;
+  font-weight: 600;
+  border: 0;
+  margin-top: 20px;
+  margin-right: 20px;
+  height: 45px;
 }
 
-.main__shopnow-btn-order{
-    background-color: transparent;
-    border-radius: 40px;
-    color: rgba(31, 31, 31, 0.733);
-    width: 100px;
-    font-weight: 600;
-    border: 0;
-    margin-top: 20px;
-    margin-right: 20px;
-    height: 45px;
-    border: 1px solid #00000036;
+.main__shopnow-btn-order {
+  background-color: transparent;
+  border-radius: 40px;
+  color: rgba(31, 31, 31, 0.733);
+  width: 120px;
+  font-weight: 600;
+  border: 0;
+  margin-top: 20px;
+  margin-right: 20px;
+  height: 45px;
+  border: 1px solid #00000036;
 }
 
 .main__container {
@@ -85,33 +84,32 @@
   flex-direction: row;
 }
 
-
-.main__container-testimonials{
-    display: flex;
-    font-family: var(--playfair-display);
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    background-color: #DEDFE2;
-    width: 50%;
+.main__container-testimonials {
+  display: flex;
+  font-family: var(--playfair-display);
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  background-color: #dedfe2;
+  width: 50%;
 }
 
-.main__container-testimonials h1{
-    padding-left: 20px;
+.main__container-testimonials h1 {
+  padding-left: 20px;
 }
 
-.main__container-testimonials-reviews{
-    flex: 1;
-    background-color: #fff0de;
-    font-family: var(--plus-jakarta-sans);
-    width: 50%;
+.main__container-testimonials-reviews {
+  flex: 1;
+  background-color: #fff0de;
+  font-family: var(--plus-jakarta-sans);
+  width: 50%;
 }
 
-.main__container-testimonials-reviews p{
-    padding: 20px;
+.main__container-testimonials-reviews p {
+  padding: 20px;
 }
 
-.main__container-testimonials-reviews img{
-    padding-left: 90px;
-    width: 60%;
+.main__container-testimonials-reviews img {
+  padding-left: 90px;
+  width: 60%;
 }
